@@ -1,3 +1,4 @@
+- Zenith432 : HDA bus scans and codecs enumeration.
 - Pike R. Alpha : Add support for (LZVN) grey logo.
 - Slice : Added NvidiaSingle
 - cparm : Rock - Paper - Scissors algo
